[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
expanduser = "1.2.2"
futures = "0.3"
regex = "1.9"
reqwest = { version = "0.11", features = [
  "json",
  "gzip",
  "brotli",
  "deflate",
  "stream",
  "cookies",
] }
reqwest-middleware = "0.2"
reqwest-retry = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiktoken-rs = "0.5"
tokio = { version = "1", features = ["full"] }
